Improve UI and question logic for trivia game
Refactored logo display and styling for better layout and responsiveness. Updated category titles and added logic to prevent repeating questions within a category. Enhanced instructions and modal content, and improved wheel and text sizing for a more polished user experience.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
 </head>
 <body>
     <div class="header">
-    <img src="/media/Logo-Fundacion.png" alt="Logo Fundación Guaicaramo" class="logo">
-    <img src="/media/Logo-DAO.png" alt="Logo DAO" class="logo">
-    <img src="/media/logo-Guaicaramo.png" alt="Logo Guaicaramo" class="logo">
-    <img src="/media/Logo-Sirius.png" alt="Logo Sirius" class="logo">
-    <h1 class="title">🌴 TRIVIA GUAICARAMO 🌴</h1>
+    <img src="/media/Logo-DAO.png" alt="Logo DAO" class="logo logo-dao">
+    <img src="/media/logo-Guaicaramo.png" alt="Logo Guaicaramo" class="logo logo-guaicaramo">
+    <img src="/media/Logo-Sirius.png" alt="Logo Sirius" class="logo logo-sirius">
+    <img src="/media/Logo-Fundacion.png" alt="Logo Fundación Guaicaramo" class="logo logo-fundacion">
+
+    <h1 class="title"><br>🌴 TRIVIA GUAICARAMO 🌴</h1>
     <p class="subtitle">¡Participa por nuestros premios!</p>
     </div>
 
@@ -35,6 +36,9 @@
     <div class="instructions">
     <h3>🎮 Regla del juego</h3>
     <p>Gira la ruleta, cada respuesta correcta te da <strong>10 puntos</strong>, para ganar uno de nuestros premios debes acertar mínimo 3 preguntas.</p>
+    
+    <div class="instructions">
+    <p>Este juego fue desarrollado con mucho ❤️ por los niños del grupo de sistemas de la Fundación Guaicaramo.</p>
 
     <!-- Modal de Pregunta -->
     <div class="question-modal" id="question-modal">
