--- a/index.html
+++ b/index.html
@@ -19,17 +19,27 @@
 
     <div class="score-section">
     <div class="score" id="score-display">🏆 Puntuación: 0</div>
+    <div class="stats">
+        <div class="stat-item">✅ Correctas: <span id="correctas-count">0</span></div>
+        <div class="stat-item">❌ Incorrectas: <span id="incorrectas-count">0</span></div>
+        <div class="stat-item">🎯 Tiros restantes: <span id="tiros-count">5</span></div>
+    </div>
     <button class="reset-btn" onclick="reiniciarJuego()">🔄 Reiniciar</button>
     </div>
 
     <div class="wheel-container">
     <div class="wheel-pointer"></div>
     <div class="wheel" id="wheel">
+        <!-- Logos en la ruleta posicionados correctamente -->
         <div class="wheel-center">🌴</div>
     </div>
     </div>
 
-    <button class="spin-btn" id="spin-btn" onclick="girarRuleta()">
+    <button class="spin-btn" id="spin-btn" onclick="iniciarJuego()" style="display: block;">
+    🚀 ¡INICIAR JUEGO!
+    </button>
+    
+    <button class="spin-btn" id="girar-btn" onclick="girarRuleta()" style="display: none;">
     🎯 ¡GIRAR RULETA!
     </button>
 
