Fix nested instructions div in index.html
Corrects the HTML structure by properly nesting the instructions and footer info content inside a single div, improving markup clarity and preventing layout issues.

--- a/index.html
+++ b/index.html
@@ -46,11 +46,10 @@
     <div class="instructions">
         <h3>🎮 Regla del juego</h3>
         <p>Gira la ruleta, cada respuesta correcta te da <strong>10 puntos</strong>, para ganar uno de nuestros premios debes acertar mínimo 3 preguntas.</p>
-    </div>
-
-    <div class="footer-info">
+        <div class="instructions">
         <p>Este juego fue desarrollado con mucho ❤️ por los niños del grupo de sistemas de la Fundación Guaicaramo.</p>
     </div>
+    </div>    
 
     <!-- Modal de Pregunta -->
     <div class="question-modal" id="question-modal">
