Realizando juego de trivia con diferentes preguntas de cultura general

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
     </div>
 
-    <button class="spin-btn" id="spin-btn" onclick="mostrarModalIdioma()">
+    <button class="spin-btn" id="spin-btn" onclick="iniciarJuego()">
         🚀 ¡INICIAR JUEGO!
     </button>
     
@@ -103,18 +103,7 @@
         </div>
     </div>
 
-    <!-- Modal de Selección de Idioma -->
-    <div class="custom-modal" id="language-modal">
-        <div class="modal-content">
-            <div class="modal-icon">🌐</div>
-            <h3>Selecciona el idioma / Select Language</h3>
-            <p>¿En qué idioma deseas jugar? / What language do you want to play in?</p>
-            <div class="modal-buttons">
-                <button class="modal-btn confirm-btn" onclick="seleccionarIdioma('es')">Español</button>
-                <button class="modal-btn confirm-btn" onclick="seleccionarIdioma('en')">English</button>
-            </div>
-        </div>
-    </div>
+
     
     <script src="logic.js"></script>
 </body>
